Implement translation support for device management components
- Updated device detail, form, and list components to utilize ngx-translate for internationalization.
- Replaced hardcoded text with translation pipes for improved localization.
- Enhanced user experience by providing translated placeholders, labels, and messages throughout the device management interface.
- Added new translation keys to the English and Portuguese JSON files for consistency across the application.

--- a/frontend/src/assets/i18n/en-US.json
+++ b/frontend/src/assets/i18n/en-US.json
@@ -135,7 +135,62 @@
     },
     "noMeasurementData": "No data available to display on chart",
     "noMeasurementDataDescription": "Data will appear here when there are device measurements",
-    "loadingChart": "Loading chart data..."
+    "loadingChart": "Loading chart data...",
+    "subtitle": "Manage your IoT devices",
+    "searchPlaceholder": "Search by name, ID or description...",
+    "filterByStatus": "Filter by status",
+    "clearFilters": "Clear Filters",
+    "refresh": "Refresh",
+    "loadingDeviceDetails": "Loading device details...",
+    "tryAgain": "Try again",
+    "backToList": "Back to List",
+    "details": "Details",
+    "noDevicesFoundWithFilters": "No devices found with applied filters.",
+    "noDevicesRegistered": "No devices registered.",
+    "noDevicesFound": "No devices found",
+    "showingDevices": "Showing {first} to {last} of {totalRecords} devices",
+    "tableHeaders": {
+      "name": "Name",
+      "status": "Status",
+      "publicId": "Public ID",
+      "description": "Description",
+      "createdAt": "Created at",
+      "actions": "Actions"
+    },
+    "noDescription": "No description",
+    "deviceDetailsSubtitle": "Complete device information",
+    "identification": "Identification",
+    "internalId": "Internal ID",
+    "publicId": "Public ID",
+    "statusAndState": "Status and State",
+    "currentStatus": "Current Status",
+    "lastUpdate": "Last Update",
+    "noDescriptionAvailable": "No description available for this device.",
+    "temporalInfo": "Temporal Information",
+    "creationDate": "Creation Date",
+    "lastModification": "Last Modification",
+    "realtimeConnection": "Real-time Connection",
+    "connectionStatus": "Status:",
+    "connected": "Connected",
+    "connecting": "Connecting...",
+    "disconnected": "Disconnected",
+    "connectionError": "Connection error",
+    "realtimeUpdates": "Receiving real-time measurement updates via WebSocket",
+    "waitingMeasurements": "Waiting for real-time measurements...",
+    "measurementsWillAppear": "New device measurements will appear here automatically",
+    "measurementMetric": "Metric",
+    "measurementValue": "Value",
+    "measurementTimestamp": "Timestamp",
+    "all": "All",
+    "deviceName": "Device Name",
+    "namePlaceholder": "Ex: Temperature Sensor",
+    "nameMaxLength": "Name must be at most 255 characters",
+    "categoryPlaceholder": "Select a category (optional)",
+    "loadingCategories": "Loading categories...",
+    "categoryOptional": "Category is optional. You can add a category later.",
+    "selectStatus": "Select status",
+    "statusRequired": "Status is required",
+    "loadingState": "Loading..."
   },
   "alerts": {
     "title": "Alerts",
