--- a/frontend/src/assets/i18n/pt-BR.json
+++ b/frontend/src/assets/i18n/pt-BR.json
@@ -135,7 +135,62 @@
     },
     "noMeasurementData": "Nenhum dado disponível para exibir no gráfico",
     "noMeasurementDataDescription": "Os dados aparecerão aqui quando houver medições do dispositivo",
-    "loadingChart": "Carregando dados do gráfico..."
+    "loadingChart": "Carregando dados do gráfico...",
+    "subtitle": "Gerencie seus dispositivos IoT",
+    "searchPlaceholder": "Buscar por nome, ID ou descrição...",
+    "filterByStatus": "Filtrar por status",
+    "clearFilters": "Limpar Filtros",
+    "refresh": "Atualizar",
+    "loadingDeviceDetails": "Carregando detalhes do dispositivo...",
+    "tryAgain": "Tentar novamente",
+    "backToList": "Voltar para Lista",
+    "details": "Detalhes",
+    "noDevicesFoundWithFilters": "Nenhum dispositivo encontrado com os filtros aplicados.",
+    "noDevicesRegistered": "Nenhum dispositivo cadastrado.",
+    "noDevicesFound": "Nenhum dispositivo encontrado",
+    "showingDevices": "Mostrando {first} a {last} de {totalRecords} dispositivos",
+    "tableHeaders": {
+      "name": "Nome",
+      "status": "Status",
+      "publicId": "ID Público",
+      "description": "Descrição",
+      "createdAt": "Criado em",
+      "actions": "Ações"
+    },
+    "noDescription": "Sem descrição",
+    "deviceDetailsSubtitle": "Informações completas do dispositivo",
+    "identification": "Identificação",
+    "internalId": "ID Interno",
+    "publicId": "ID Público",
+    "statusAndState": "Status e Estado",
+    "currentStatus": "Status Atual",
+    "lastUpdate": "Última Atualização",
+    "noDescriptionAvailable": "Nenhuma descrição disponível para este dispositivo.",
+    "temporalInfo": "Informações Temporais",
+    "creationDate": "Data de Criação",
+    "lastModification": "Última Modificação",
+    "realtimeConnection": "Conexão em Tempo Real",
+    "connectionStatus": "Status:",
+    "connected": "Conectado",
+    "connecting": "Conectando...",
+    "disconnected": "Desconectado",
+    "connectionError": "Erro na conexão",
+    "realtimeUpdates": "Recebendo atualizações de medições em tempo real via WebSocket",
+    "waitingMeasurements": "Aguardando medições em tempo real...",
+    "measurementsWillAppear": "As novas medições do dispositivo aparecerão aqui automaticamente",
+    "measurementMetric": "Métrica",
+    "measurementValue": "Valor",
+    "measurementTimestamp": "Timestamp",
+    "all": "Todos",
+    "deviceName": "Nome do Dispositivo",
+    "namePlaceholder": "Ex: Sensor de Temperatura",
+    "nameMaxLength": "Nome deve ter no máximo 255 caracteres",
+    "categoryPlaceholder": "Selecione uma categoria (opcional)",
+    "loadingCategories": "Carregando categorias...",
+    "categoryOptional": "Categoria é opcional. Você pode adicionar uma categoria posteriormente.",
+    "selectStatus": "Selecione o status",
+    "statusRequired": "Status é obrigatório",
+    "loadingState": "Carregando..."
   },
   "alerts": {
     "title": "Alertas",
