Add categories feature with routing and translation support
- Introduced a new 'categories' route for managing device categories, enhancing the application's navigation.
- Updated the header and sidebar components to include menu items for categories, improving user access to this feature.
- Added translation keys and messages for categories in both English and Portuguese JSON files, ensuring localization support.
- Enhanced user experience by providing relevant labels and descriptions for category management functionalities.

--- a/frontend/src/assets/i18n/en-US.json
+++ b/frontend/src/assets/i18n/en-US.json
@@ -205,9 +205,55 @@
       "resolved": "Resolved"
     }
   },
+  "categories": {
+    "title": "Categories",
+    "subtitle": "Manage device categories",
+    "newCategory": "New Category",
+    "editCategory": "Edit Category",
+    "createDescription": "Fill in the data to create a new category",
+    "editDescription": "Update category information",
+    "loadingCategories": "Loading categories...",
+    "loadingCategory": "Loading category...",
+    "name": "Name",
+    "description": "Description",
+    "descriptionPlaceholder": "Optional category description...",
+    "enterName": "Enter category name",
+    "nameRequired": "Name is required",
+    "nameMinLength": "Name must be at least 3 characters",
+    "nameMaxLength": "Name must be at most 255 characters",
+    "descriptionMaxLength": "Description must be at most 1000 characters",
+    "descriptionOptional": "Description is optional. You can add a description to help identify the category.",
+    "searchPlaceholder": "Search by name or description...",
+    "clearFilters": "Clear Filters",
+    "refresh": "Refresh",
+    "tryAgain": "Try again",
+    "noCategoriesFoundWithFilters": "No categories found with applied filters.",
+    "noCategoriesRegistered": "No categories registered.",
+    "noCategoriesFound": "No categories found",
+    "showingCategories": "Showing {first} to {last} of {totalRecords} categories",
+    "tableHeaders": {
+      "name": "Name",
+      "description": "Description",
+      "createdAt": "Created at",
+      "updatedAt": "Updated at",
+      "actions": "Actions"
+    },
+    "noDescription": "No description",
+    "deleteConfirm": "Confirm Deletion",
+    "deleteConfirmMessage": "Are you sure you want to delete the category \"{{name}}\"? This action cannot be undone.",
+    "deleteSuccess": "Success",
+    "categoryDeleted": "Category deleted successfully",
+    "deleteError": "Error deleting",
+    "loadError": "Error loading category",
+    "createSuccess": "Category created successfully!",
+    "createError": "Error creating category",
+    "updateSuccess": "Category updated successfully!",
+    "updateError": "Error updating category"
+  },
   "menu": {
     "dashboard": "Dashboard",
     "devices": "Devices",
+    "categories": "Categories",
     "account": "My Account"
   },
   "account": {
