--- a/frontend/src/assets/i18n/pt-BR.json
+++ b/frontend/src/assets/i18n/pt-BR.json
@@ -205,9 +205,55 @@
       "resolved": "Resolvido"
     }
   },
+  "categories": {
+    "title": "Categorias",
+    "subtitle": "Gerencie as categorias de dispositivos",
+    "newCategory": "Nova Categoria",
+    "editCategory": "Editar Categoria",
+    "createDescription": "Preencha os dados para criar uma nova categoria",
+    "editDescription": "Atualize as informações da categoria",
+    "loadingCategories": "Carregando categorias...",
+    "loadingCategory": "Carregando categoria...",
+    "name": "Nome",
+    "description": "Descrição",
+    "descriptionPlaceholder": "Descrição opcional da categoria...",
+    "enterName": "Digite o nome da categoria",
+    "nameRequired": "Nome é obrigatório",
+    "nameMinLength": "Nome deve ter pelo menos 3 caracteres",
+    "nameMaxLength": "Nome deve ter no máximo 255 caracteres",
+    "descriptionMaxLength": "Descrição deve ter no máximo 1000 caracteres",
+    "descriptionOptional": "Descrição é opcional. Você pode adicionar uma descrição para ajudar a identificar a categoria.",
+    "searchPlaceholder": "Buscar por nome ou descrição...",
+    "clearFilters": "Limpar Filtros",
+    "refresh": "Atualizar",
+    "tryAgain": "Tentar novamente",
+    "noCategoriesFoundWithFilters": "Nenhuma categoria encontrada com os filtros aplicados.",
+    "noCategoriesRegistered": "Nenhuma categoria cadastrada.",
+    "noCategoriesFound": "Nenhuma categoria encontrada",
+    "showingCategories": "Mostrando {first} a {last} de {totalRecords} categorias",
+    "tableHeaders": {
+      "name": "Nome",
+      "description": "Descrição",
+      "createdAt": "Criado em",
+      "updatedAt": "Atualizado em",
+      "actions": "Ações"
+    },
+    "noDescription": "Sem descrição",
+    "deleteConfirm": "Confirmar Exclusão",
+    "deleteConfirmMessage": "Tem certeza que deseja excluir a categoria \"{{name}}\"? Esta ação não pode ser desfeita.",
+    "deleteSuccess": "Sucesso",
+    "categoryDeleted": "Categoria excluída com sucesso",
+    "deleteError": "Erro ao excluir",
+    "loadError": "Erro ao carregar categoria",
+    "createSuccess": "Categoria criada com sucesso!",
+    "createError": "Erro ao criar categoria",
+    "updateSuccess": "Categoria atualizada com sucesso!",
+    "updateError": "Erro ao atualizar categoria"
+  },
   "menu": {
     "dashboard": "Dashboard",
     "devices": "Dispositivos",
+    "categories": "Categorias",
     "account": "Minha Conta"
   },
   "account": {
