Remove outdated test report JSON files and update styles for improved layout and spacing
- Deleted old test report files to clean up the repository.
- Enhanced CSS styles for better layout consistency and spacing across various components, including headers, cards, and tables.
- Improved responsiveness and visual hierarchy in device and category management interfaces.
- Updated translation files to include new keys for category filtering, ensuring localization support.

--- a/frontend/src/assets/i18n/en-US.json
+++ b/frontend/src/assets/i18n/en-US.json
@@ -139,6 +139,8 @@
     "subtitle": "Manage your IoT devices",
     "searchPlaceholder": "Search by name, ID or description...",
     "filterByStatus": "Filter by status",
+    "filterByCategory": "Filter by category",
+    "allCategories": "All categories",
     "clearFilters": "Clear Filters",
     "refresh": "Refresh",
     "loadingDeviceDetails": "Loading device details...",
